--- a/PessoaWebApi/PessoaWebApi.csproj
+++ b/PessoaWebApi/PessoaWebApi.csproj
@@ -14,4 +14,14 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Model\DTO\TodoItemDTO.cs" />
+      <Compile Remove="Model\TodoDb.cs" />
+      <Compile Remove="Model\Todo.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Test\todo-webapi.http" />
+    </ItemGroup>
+
 </Project>
